# f5AS3

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  base_rundeck_job.yml  docker-compose.yml  inventory.ini  pb.as3.yml  pyproject.toml
collections/: requirements.yml
roles/f5-as3/tasks/: main.yml
templates/: app-vs.j2  tenant_new.j2  tenant_update_vs_add.j2  tenant_update_vs_delete.j2
tests/unit/: test_pass_default.py
