[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.poetry]
name = "f5-as3"
version = "0.1.0"
description = "F5 AS3"
authors = ["Harish Krishnoji <harish.krishnoji@fiserv.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible-base = "^2.10"
paramiko = "^2.7"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.0.0"
bandit = "^1.6.2"
pylint = "^2.5.3"
pytest = "^6.0.1"
yamllint = "^1.24.2"
flake8 = "^3.8.3"
black = "^20.8b1"
mypy = ">=0.902"
pydocstyle = "^5.1.1"
coverage = "^4.0"

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus-appdev.1dc.com/repository/pypi-group/simple"
default = true

[[tool.poetry.source]]
name = "gitlab"
url = "https://git-enterprise-jc.onefiserv.net/api/v4/projects/1656/packages/pypi/simple"
secondary = true

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """